--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,20 +4,7 @@ body {
   padding: 0;
 }
 
-.section1 {
+.container {
   display: flex;
-}
-
-.contentContainer {
-  box-sizing: border-box;
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-  width: 100%;
-  gap: 16px;
-  padding: 16px;
-}
-
-.leftGrid {
-}
-.rightGrid {
+  flex-direction: column;
 }
