Signup Page Added

--- a/src/Pages/SignupPage/SignupPage.module.css
+++ b/src/Pages/SignupPage/SignupPage.module.css
@@ -54,13 +54,6 @@
   font-size: 16px;
 }
 
-.forgotText {
-  font-weight: 500;
-  font-size: 14px;
-  color: #578ed5;
-  margin: 12px 0;
-}
-
 .btn2 {
   padding: 12px 18px;
   border: none;
@@ -69,4 +62,5 @@
   font-weight: 500;
   color: #ffffff;
   background-color: rgb(51, 177, 51);
+  margin-top: 12px;
 }
