--- a/src/Components/PostingCard/PostingCard.module.css
+++ b/src/Components/PostingCard/PostingCard.module.css
@@ -9,15 +9,18 @@
   display: flex;
   padding-bottom: 16px;
 }
-.inputSection h5 {
-  display: flex;
+.inputSection textarea {
+  width: 100%;
   padding-left: 16px;
-  align-items: center;
-  color: gray;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: small;
+  font-size: 14px;
   font-weight: 300;
+  border: none;
+  outline: none;
+  resize: none;
+  overflow: hidden;
 }
+
 .attachmentsSection {
   display: flex;
   flex-direction: row;
@@ -30,14 +33,31 @@
 .attachmentComp {
   display: flex;
   gap: 12px;
+  flex-wrap: wrap;
 }
 
 .btn {
   padding: 6px 6px;
-  background-color: rgba(48, 145, 48, 0.9);
+  background-color: rgba(48, 145, 48);
   border: none;
   border-radius: 4px;
   font-weight: 500;
   font-size: small;
   color: #ffffff;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: rgba(40, 119, 40);
+}
+
+/* AttachmentComp */
+
+.AttachmentComp {
+  display: flex;
+  align-items: center;
+}
+
+.AttachmentComp:hover {
+  cursor: pointer;
 }
