--- a/src/Pages/Homepage/Homepage.module.css
+++ b/src/Pages/Homepage/Homepage.module.css
@@ -1,7 +1,8 @@
 .section1 {
   display: flex;
-  height: 94vh;
+  height: 100vh;
   padding-top: 28px;
+  box-sizing: border-box;
 }
 
 .contentContainer {
@@ -62,7 +63,7 @@
 
 .onlineFr {
   display: flex;
-  height: 355px;
+  height: 460px;
   overflow-y: scroll;
   flex-direction: column;
   scroll-behavior: smooth;
